added jsx file and build rules

--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
     <title>The Beer Counter</title>
 
-    <link href="app/css/beer.css" rel="stylesheet" />
-
+    <link href="css/beer.css" rel="stylesheet" />
+    <script src="thirdParty/react/react.js"></script>
     <meta name="viewport" content="width=device-width">
 </head>
-<body>
-    <div class='beerDiv'>
-        <img src='app/img/beer.jpg'/>
-        <p>Counter</p><br />
-        <a href=''>Clear</a>
-    </div>
-</body>
+    <body>
+        <script src="js/beerCounter.js"></script>
+    </body>
 </html>
