upgrade react, beerCounter in div. Possible to render several without page load.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>The Beer Counter</title>
-
     <link href="css/beer.css" rel="stylesheet" />
     <script src="thirdParty/react/react.js"></script>
     <meta name="viewport" content="width=device-width">
 </head>
     <body>
+        <div id='myDiv'></div>
         <script src="js/beerCounter.js"></script>
     </body>
 </html>
